--- a/indx.html
+++ b/indx.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/18118/18118720.png" type="image/x-icon">
+    <title>war thunder</title>
 </head>
-<body dir="ltr">8907
-    <h1 id="rty">tttttttt</h1>
-<input type="hi" placeholder="hi">
-<input type="email" name="evyatar" id="ujuuuu">
-<button>שליחה</button>
+<body dir="rtl"   style="background-color: rgb(163, 211, 29);">
+ <h1>האתר של אביתר</h1>   
+<h2>אני רוצה להכיר לכם מישחק שניקרה </h2>
+<h3>war thunder</h3>
+<h4>ואני מאמליץ לכם עליו</h4>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUhxu2qpjVaXEgZr8gmmhaqIZZpHGIDK-07A&s" >
+<a href="https://en.wikipedia.org/wiki/War_Thunder">לחצו פו</a>
+<i>וזהו</i>
+
+
+
+
+
+
 
 
 </body>
